fix qrcode-questionmark alignment, add session token before logging links

--- a/css/phonetrack.css
+++ b/css/phonetrack.css
@@ -926,6 +926,9 @@ label[for=autoexportpath], #autoexportpath {
     border: 0px;
     background: none;
 }
+.urlhelpbutton i {
+    float: left;
+}
 #trackurlinput {
     width: 100%;
 }
